--- a/.github/workflows/ma4in.yml
+++ b/.github/workflows/ma4in.yml
@@ -1,97 +1,53 @@
-name: Windows-RDP-Fixed
+name: Windows-AnyDesk
 
 on:
   workflow_dispatch:
 
 jobs:
-  rdp:
+  build:
     runs-on: windows-latest
     timeout-minutes: 360
 
     steps:
-    - name: Setup RDP Service
+    - name: Download AnyDesk
       run: |
-        # Enable RDP
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 0
-        
-        # Start service
-        Set-Service -Name TermService -StartupType Automatic
-        Start-Service -Name TermService
-        
-        Write-Host "RDP Service enabled and started"
+        Invoke-WebRequest -Uri "https://download.anydesk.com/AnyDesk.exe" -OutFile "AnyDesk.exe"
 
-    - name: Create RDP User
+    - name: Install and Setup AnyDesk
       run: |
-        $password = if ($env:RDP_PASSWORD) { $env:RDP_PASSWORD } else { "P@ssw0rd123!" }
-        $securePassword = ConvertTo-SecureString $password -AsPlainText -Force
-        
-        # Remove user if exists
-        if (Get-LocalUser -Name "rdpuser" -ErrorAction SilentlyContinue) {
-          Remove-LocalUser -Name "rdpuser"
-        }
-        
-        # Create new user
-        New-LocalUser -Name "rdpuser" -Password $securePassword -PasswordNeverExpires -AccountNeverExpires
-        Add-LocalGroupMember -Group "Administrators" -Member "rdpuser"
-        Add-LocalGroupMember -Group "Remote Desktop Users" -Member "rdpuser"
-        
-        Write-Host "User 'rdpuser' created successfully"
-      env:
-        RDP_PASSWORD: ${{ secrets.RDP_PASSWORD }}
-
-    - name: Download ngrok
-      run: |
-        Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip" -OutFile "ngrok.zip"
-        Expand-Archive -Path "ngrok.zip" -DestinationPath "ngrok"
-        Remove-Item "ngrok.zip"
-
-    - name: Configure ngrok
-      run: |
-        ./ngrok/ngrok.exe config add-authtoken $env:NGROK_AUTHTOKEN
-      env:
-        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
-
-    - name: Start ngrok Tunnel
-      run: |
-        Start-Process -FilePath "./ngrok/ngrok.exe" -ArgumentList "tcp 3389 --log=stdout" -WindowStyle Hidden
+        Start-Process .\AnyDesk.exe -ArgumentList "--install C:\AnyDesk --start-with-win --silent" -Wait
         Start-Sleep -Seconds 15
+        
+        # Get AnyDesk ID
+        $adPath = "C:\Program Files (x86)\AnyDesk\AnyDesk.exe"
+        if(!(Test-Path $adPath)) { $adPath = "C:\AnyDesk\AnyDesk.exe" }
+        
+        # Set password via command line
+        & $adPath --set-password MyPass123!
 
-    - name: Get Connection Info
+    - name: Get AnyDesk ID
       run: |
-        try {
-          $response = Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels"
-          $publicUrl = $response.tunnels[0].public_url
-          $cleanUrl = $publicUrl -replace "tcp://", ""
-          
+        Start-Sleep -Seconds 10
+        $adPath = "C:\Program Files (x86)\AnyDesk\AnyDesk.exe"
+        if(!(Test-Path $adPath)) { $adPath = "C:\AnyDesk\AnyDesk.exe" }
+        
+        if(Test-Path $adPath) {
+          $id = & $adPath --get-id
           Write-Host ""
-          Write-Host "=============================================" -ForegroundColor Green
-          Write-Host "  RDP CONNECTION READY!" -ForegroundColor Yellow
-          Write-Host "=============================================" -ForegroundColor Green
-          Write-Host "  Host: $cleanUrl" -ForegroundColor Cyan
-          Write-Host "  Username: rdpuser" -ForegroundColor Cyan
-          Write-Host "  Password: (your RDP_PASSWORD secret)" -ForegroundColor Cyan
-          Write-Host "=============================================" -ForegroundColor Green
+          Write-Host "================================================"
+          Write-Host "ANYDESK ID: $id" -ForegroundColor Green
+          Write-Host "PASSWORD: MyPass123!" -ForegroundColor Green
+          Write-Host "================================================"
           Write-Host ""
-          Write-Host "Connection String: $cleanUrl" -ForegroundColor White
-          Write-Host ""
-        } catch {
-          Write-Host "Ngrok API not responding yet. Wait 30 more seconds." -ForegroundColor Yellow
-          Start-Sleep -Seconds 30
-          
-          $response = Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels"
-          $publicUrl = $response.tunnels[0].public_url
-          $cleanUrl = $publicUrl -replace "tcp://", ""
-          Write-Host "Connection: $cleanUrl" -ForegroundColor Cyan
+          Write-Host "Download AnyDesk on your phone and connect!"
+        } else {
+          Write-Host "AnyDesk not found!"
         }
 
-    - name: Keep Session Alive
+    - name: Keep Alive
       run: |
-        Write-Host "RDP server is running. Session will stay alive for 6 hours." -ForegroundColor Green
-        Write-Host "Press Ctrl+C in Actions to stop." -ForegroundColor Yellow
-        
-        while ($true) {
-          Start-Sleep -Seconds 300
-          Write-Host "Still running... $(Get-Date -Format 'HH:mm:ss')"
+        Write-Host "AnyDesk is running. Keep this workflow open."
+        while($true) { 
+          Start-Sleep 600
+          Write-Host "Still running..."
         }
